# text-search-engine

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/utils/: analyzer.rs  engine.rs  indexer.rs  mod.rs
