[package]
name = "text-search-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = "0.6.1"
quick-xml = { version = "0.36", features = ["serialize"] }
rust-stemmers = "1.2"
stop-words = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
hashbrown = "0.14" 
rayon = "1.10"